client/css/editor/sidebarModules.css
.editorModule h1 {
  color: var(--VTTblue);
  text-align: center;
}

.editorModule h2 {
  color: white;
  background: var(--VTTblue);
  padding: 5px;
  border-radius: 5px;
  padding-left: 20px;
}

.editorModule .buttonBar {
  text-align: right;
}

.editorModule .buttonBar button {
  display: inline-flex;
}

/* properties */

.editorModule .widgetSelectionButton {
  height: 150px;
  width: 150px;
  margin: 3px;
  position: relative;
  display: inline-flex;
  background: linear-gradient(45deg, rgba(0, 0, 0, 0.0980392) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.0980392) 75%, rgba(0, 0, 0, 0.0980392) 0), linear-gradient(45deg, rgba(0, 0, 0, 0.0980392) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.0980392) 75%, rgba(0, 0, 0, 0.0980392) 0), white;
  background-position: 0px 0, 5px 5px;
  background-size: 10px 10px, 10px 10px;
  border-radius: 10px;
  border: 3px solid #ccc;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.editorModule .widgetSelectionButton:hover, .editorModule .widgetSelectionButton.selected {
  border: 3px solid var(--VTTblue);
}
.editorModule .widgetSelectionButton.selected::after {
  font-family: 'Material Icons';
  line-height: 1.25em;
  text-align: center;
  height: 1.25em;
  width: 1.25em;
  background: var(--VTTblue);
  color: #fff;
  border-top-right-radius: 40%;
  border-top-left-radius: 50%;
  border-bottom-right-radius: 50%;
  border-bottom-left-radius: 50%;
  content: 'check';
  position: absolute;
  top: -3px;
  right: -3px;
}

.tune.editorModule .faceTemplateEdit {
  margin-bottom: 40px;
}

.tune.editorModule .faceTemplateEdit > div {
  display: inline-block;
  vertical-align: top;
}

.tune.editorModule .faceTemplateProperty {
  margin-left: 20px;
}


.tune.editorModule .suitProperties {
  height: 160px;
}

.tune.editorModule .suitProperties > button.widgetSelectionButton {
  position: absolute;
}

.tune.editorModule .suitProperties > div {
  margin-left: 170px;
}

.tune.editorModule .suitProperties label {
  display: inline-block;
  width: 60px;
}


.tune.editorModule .cardFrontPreview {
  display: flex;
  margin-bottom: 10px;
}

.tune.editorModule .cardFrontPreview > div {
  flex-grow: 1;
}

.tune.editorModule .cardFrontPreview [type=number] {
  vertical-align: super;
  width: 50px;
}


/* undo */

.undo.editorModule > .undoEntry {
  padding: 2px;
  color: var(--textDimColor1);
  cursor: pointer;
}

.undo.editorModule > .active.undoEntry {
  color: var(--textColor);
  background: var(--backgroundHighlightColor1);
  cursor: unset;
}

.undo.editorModule > .active.undoEntry ~ div {
  color: var(--textColor);
}


/* assets */

.image.editorModule .externalLink {
  display: flex;
  position: relative;
}

.image.editorModule .externalLink:nth-child(2n) {
  background: var(--backgroundHighlightColor1);
}

.image.editorModule .externalLink::after {
  font-family: "Material Icons";
  font-size: 40px;
  position: absolute;
  top: 5px;
  left: 5px;
  text-shadow: 0 0 4px white;
}

.image.editorModule .externalLink.queued::after {
  content: "hourglass_empty";
}

.image.editorModule .externalLink.processing::after {
  content: "cloud_download";
}

.image.editorModule .externalLink.done::after {
  content: "check_circle";
}

.image.editorModule .externalLink:nth-child(2n) {
  background: var(--backgroundHighlightColor1);
}

.image.editorModule .externalLink img {
  height: 100px;
  width: 100px;
  min-width: 100px;
  object-fit: contain;
}

.image.editorModule .externalLink span {
  word-break: break-all;
  padding: 5px;
}
.image.editorModule tr:nth-child(2n) {
  background: #eee;
}
.image.editorModule td {
  padding: 10px;
}
.image.editorModule td > img {
  display: block;
  width: 100px;
  background: linear-gradient(45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.1) 0), linear-gradient(45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.1) 0), white;
  background-position: 0px 0, 5px 5px;
  background-size: 10px 10px, 10px 10px;
}
.image.editorModule td > input[type=checkbox] {
  float: left;
}
.image.editorModule td > label {
  white-space: pre;
  display: inline-block;
}

